tests/neg/i14834.scala
type F[_] = A
type A = F[?]  // error: cyclic
